crates/oxc_css_parser/tests/error/scss/at-rule/use/with-missing-value.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `:`, but found `)`
  ┌─ with-missing-value.scss:1:22
  │
1 │ @use "other" with ($a);
  │                      ^


